# sfml-sorting

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build-container.sh  build.sh  configure.sh  test.sh
.github/workflows/: cmake.yml  docker.yml
sfml-sorting/: Bar.cpp  CMakeLists.txt  sfml-sorting.cpp  sfml-sorting.h
src/: CMakeLists.txt  main.cpp  sfml-sorting.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt
src/shapes/: Bar.cpp  Bar.h  CMakeLists.txt
src/utils/: CMakeLists.txt  RandomNumberGenerator.cpp  RandomNumberGenerator.h
tests/: CMakeLists.txt  RandomNumberGeneratorTests.cpp
